--- a/Resources/Private/Language/locallang_tca.xlf
+++ b/Resources/Private/Language/locallang_tca.xlf
@@ -3,16 +3,17 @@
 	<file source-language="en" datatype="plaintext" original="EXT:employee/Resources/Private/Language/locallang_db" date="2021-05-18T23:11:34Z" product-name="employee">
 		<header/>
 		<body>
-			<trans-unit id="tx_employee_domain_model_employee" resname="tx_employee_domain_model_employee">
+			<trans-unit id="tx_employee_domain_model_employee">
 				<source>Employee</source>
 			</trans-unit>
-			<trans-unit id="tt_address.tx_extbase_type.Tx_Employee_Employee" resname="tt_address.tx_extbase_type.Tx_Employee_Employee">
-				<source>Ps14 Employee Employee</source>
+			<trans-unit id="tx_employee_domain_model_employee.record_type">
+				<source>Employee</source>
 			</trans-unit>
-			<trans-unit id="tx_employee_frontend.name" resname="tx_employee_frontend.name">
+
+			<trans-unit id="plugin_frontend.name">
 				<source>Employee Frontend</source>
 			</trans-unit>
-			<trans-unit id="tx_employee_frontend.description" resname="tx_employee_frontend.description">
+			<trans-unit id="plugin_frontend.description">
 				<source></source>
 			</trans-unit>
 		</body>
